[package]
name = "flyer-orm"
version = "0.0.0"
edition = "2024"
authors = ["Themba Lucas Ngubeni <thembangubeni04@email.com>"]
license = "MIT"
description = "ORM"
readme = "README.md"
homepage = "https://github.com/lucas11776-golang/flyer-orm"
repository = "https://github.com/lucas11776-golang/flyer-orm"

[dependencies]
anyhow = "1.0.101"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "macros", "sqlite", "mysql", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.48.0", features = ["full"] }