[package]
name = "flyer-orm"
version = "0.0.0"
edition = "2024"
authors = ["Themba Lucas Ngubeni <thembangubeni04@email.com>"]
license = "MIT"
description = "ORM"
readme = "README.md"
homepage = "https://github.com/lucas11776-golang/flyer-orm"
repository = "https://github.com/lucas11776-golang/flyer-orm"

[dependencies]
anyhow = "1.0.101"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6",features = ["any", "sqlite", "mysql", "postgres", "macros", "runtime-tokio-native-tls"] }

