[package]
name = "flyer-orm"
version = "0.0.3"
edition = "2024"
authors = ["Themba Lucas Ngubeni <thembangubeni04@email.com>"]
license = "MIT"
description = "ORM"
readme = "README.md"
homepage = "https://github.com/lucas11776-golang/flyer-orm"
repository = "https://github.com/lucas11776-golang/flyer-orm"

[dependencies]
anyhow = "1.0.101"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6",features = ["any", "sqlite", "mysql", "postgres", "macros", "runtime-tokio-native-tls"] }
async-trait = "0.1.89"
async-std = "1.13.2"
uuid = { version = "1.21.0", features = ["v4"] }

